[gd_scene load_steps=3 format=3 uid="uid://cg8xqvfy4hqqr"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.04, 0.04, 0.04, 1, 0.102, 0.102, 0.18, 1, 0.04, 0.04, 0.04, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill = 1
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_bg")

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(640, 720)
emitting = true
amount = 40
lifetime = 12.0
preprocess = 5.0
explosiveness = 0.1
randomness = 0.5
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, -50)
initial_velocity_min = 30.0
initial_velocity_max = 80.0
scale_amount_min = 2.0
scale_amount_max = 6.0
color = Color(1, 0.4, 0.4, 0.4)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.267, 0.267, 1)
theme_override_colors/font_shadow_color = Color(0.1, 0.1, 0.1, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 72
text = "Apocalypse Now"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.533, 0.533, 0.533, 1)
theme_override_font_sizes/font_size = 18
text = "SURVIVE THE BUNKER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.867, 0.467, 1)
theme_override_font_sizes/font_size = 20
text = "â–¶ START GAME"

[node name="ControlsButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.867, 0.467, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸŽ® CONTROLS"

[node name="CreditsButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.867, 0.467, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸ“œ CREDITS"

[node name="ZombieLeft" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = 0.0
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 150
text = "ðŸ§Ÿ"

[node name="ZombieRight" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -200.0
offset_right = 20.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 150
text = "ðŸ§Ÿ"
horizontal_alignment = 2

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_colors/font_color = Color(0.267, 0.267, 0.267, 1)
text = "v1.0.0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="MenuContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
